--- a/.classpath
+++ b/.classpath
@@ -42,7 +42,7 @@
 	<classpathentry kind="lib" path="libWebDriverManager/slf4j-api-1.7.32.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/webdrivermanager-5.0.2.jar"/>
 	<classpathentry kind="lib" path="libSelenium/client-combined-3.141.59-sources.jar"/>
-	<classpathentry kind="lib" path="libSelenium/selenium-server-standalone-3.141.59.jar"/>
+	<classpathentry kind="lib" path="libSelenium/selenium-server-standalone-3.141.59.jar" sourcepath="libSelenium/client-combined-3.141.59-sources.jar"/>
 	<classpathentry kind="lib" path="libSelenium/testng-6.14.3.jar"/>
 	<classpathentry kind="lib" path="libSelenium/testng-6.14.3-sources.jar"/>
 	<classpathentry kind="lib" path="libLog4J/commons-lang3-3.8.1.jar"/>
